<resources>
    <string name="app_name">Warung Warteg Tegal</string>
    <string name="start_now">Start now</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="address">Address</string>
    <string name="confirmation">Confirmation</string>
    <string name="kirim">Kirim</string>
    <string name="thank_you">Thank You!</string>
    <string name="order_confirmed">Your order has been confirmed</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="notes">Notes</string>
    <string name="customer_name">Customer Name</string>
</resources>